--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -1,8 +1,8 @@
 name: Refresh
 on:
-  # performed every two hours
+  # performed every eight hours
   schedule:
-    - cron: "0 */2 * * *"
+    - cron: "28 */18 * * *"
   workflow_dispatch:
 
 concurrency:
